Fix integration tests for comments-based model, remove stale references
Rewrite all integration tests to use the new API:
- addIndexDeferred() -> addIndex(tableName, index("name").deferred())
- Remove all DeferredIndexOperationDAO, DeferredIndexStatus references
- Update constructor calls to match new signatures
- Remove tests that relied on tracking-table status queries
- Update upgrade step classes in v1_0_0 and v2_0_0

All tests pass across all modules (unit + integration).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>